filters/cargo/build_test/failure.txt
   Compiling tokf v0.1.0 (/Users/user/project)
error[E0425]: cannot find value `foo` in this scope
 --> src/main.rs:5:5
  |
5 |     foo;
  |     ^^^ not found in this scope

error: aborting due to previous error